# gbe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_win.bat  gbe.py  imgui.ini
.github/workflows/: build.yml  run_gbe_tests.yml
Testing/: TAG
Testing/20250323-1342/: Test.xml
assets/shaders/: fragment.glsl
cartridge/: Cartridge.cpp  Cartridge.h  CartridgeType.h  cartridge.cmake
cpu/: Alu.cpp  AluResult.h  AssemblyInstruction.cpp  AssemblyInstruction.h  Cpu.cpp  Cpu.h  CpuAlu.cpp  CpuDecodeRun.cpp  CpuJump.cpp  CpuLoad.cpp  CpuOperand.h  CpuRegister.cpp  CpuRegister.h  CpuRegistersSet.cpp  CpuRegistersSet.h  CpuRun.cpp  CpuStack.cpp  InstructionResult.h  cpu.cmake
cpu/alu/: Alu.cpp  Alu.h  alu.cmake
cpu/debugger/: CpuDebugger.cpp  CpuDebugger.h  debugger.cmake
cpu/disassembler/: Assembly.cpp  Assembly.h  Disassembler.cpp  Disassembler.h  disassembler.cmake
cpu/instruction/: Assembly.cpp  Assembly.h  Disassembler.cpp  Disassembler.h  Instruction.cpp  Instruction.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionResult.h  InstructionType.h  Operand.cpp  Operand.h  instruction.cmake
cpu/registers/: CpuFlags.h  CpuRegister.cpp  CpuRegister.h  CpuRegistersSet.cpp  CpuRegistersSet.h  registers.cmake
dependencies/doctest/: CMakeLists.txt  doctest.h
dependencies/magic_enum/: CMakeLists.txt
frontend/: Application.cpp  Application.h  frontend.cmake
frontend/event/: EventManager.cpp  EventManager.h  event.cmake
frontend/gui/: GuiLayer.cpp  GuiLayer.h  GuiManager.cpp  GuiManager.h  GuiUtils.cpp  GuiUtils.h  gui.cmake
frontend/gui/menu/: GuiMainMenu.cpp  GuiMainMenu.h  menu.cmake
frontend/gui/window/: GuiCpuState.cpp  GuiCpuState.h  GuiDebugger.cpp  GuiDebugger.h  GuiDisassembler.cpp  GuiDisassembler.h  GuiMemoryDump.cpp  GuiMemoryDump.h  GuiWindow.cpp  GuiWindow.h  window.cmake
frontend/rendering/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  rendering.cmake
gameboy/: Gameboy.cpp  Gameboy.h  gameboy.cmake
io/: IORegister.h  io.cmake
io/graphics/: LcdScreen.h  ObjectAttribute.cpp  ObjectAttribute.h  ObjectAttributesMemory.cpp  ObjectAttributesMemory.h  PixelFIFO.cpp  PixelFIFO.h  Ppu.cpp  Ppu.h  PpuTask.cpp  PpuTask.h  PpuTaskManager.cpp  PpuTaskManager.h  TileData.cpp  TileData.h  Vram.cpp  Vram.h  graphics.cmake
io/graphics/lcd/: LcdControl.cpp  LcdControl.h  LcdPalette.cpp  LcdPalette.h  LcdPalettesMemory.cpp  LcdPalettesMemory.h  LcdScreen.h
io/graphics/oam/: ObjectAttribute.cpp  ObjectAttribute.h  ObjectAttributesMemory.cpp  ObjectAttributesMemory.h
io/graphics/vram/: TileData.cpp  TileData.h  TileMap.cpp  TileMap.h  Vram.cpp  Vram.h
io/interrupts/: InterruptFlag.h  InterruptManager.cpp  InterruptManager.h  interrupts.cmake
io/joypad/: Joypad.cpp  Joypad.h  joypad.cmake
io/timer/: Timer.cpp  Timer.h  timer.cmake
memory/: IMemory.cpp  IMemory.h  Memory.cpp  Memory.h  MemoryArea.cpp  MemoryArea.h  MemoryMap.cpp  MemoryMap.h  Ram.cpp  Ram.h  memory.cmake
tests/: GBETestSuite.h  tests.cmake
tests/cpu/: AluTest.cpp  CpuRegisterTest.cpp  CpuRegistersSetTest.cpp  CpuRomTest.cpp  CpuTest.cpp  InstructionDecoderTest.cpp  InstructionTest.cpp
tests/io/graphics/: LcdPaletteTest.cpp  PpuTaskTest.cpp  PpuTest.cpp  TileDataTest.cpp
tests/io/joypad/: JoypadTest.cpp
tests/memory/: MemoryTest.cpp
util/: Assert.cpp  Assert.h  Binary.h  Class.h  Foreach.h  Signal.h  util.cmake
